--- a/room_presence.yaml
+++ b/room_presence.yaml
@@ -2,7 +2,7 @@ substitutions:
   # name for ESP Home
   name: "shd-room-presence"
   # Mandatory room name
-  room: "test"
+  room: "default_room"
   friendly_name: "SHD RoomPresence"
   project_name: "SmartHomeDesign.RoomPresence"
   project_version: "1.3.1"
@@ -39,9 +39,9 @@ api:
 
 ota:
 
-
 wifi:
   ap: {}
+
 captive_portal:
 
 improv_serial:
@@ -49,9 +49,9 @@ improv_serial:
 esp32_improv:
   authorizer: none
 
-# dashboard_import:
-#   package_import_url: github://smarthomedesign/room_presence/room_presence.yaml@main
-#   import_full_config: false
+dashboard_import:
+  package_import_url: github://smarthomedesign/room_presence/room_presence.yaml@main
+  import_full_config: false
 
 light:
   - platform: status_led
