--- a/room_presence.yaml
+++ b/room_presence.yaml
@@ -52,7 +52,7 @@ esp32_improv:
   authorizer: none
 
 dashboard_import:
-  package_import_url: github://smarthomedesign/room_presence/room_presence.yaml@dev
+  package_import_url: github://smarthomedesign/room_presence/room_presence.yaml@main
   import_full_config: false
 
 light:
