--- a/room_presence.yaml
+++ b/room_presence.yaml
@@ -4,14 +4,13 @@ substitutions:
   friendly_name: "SHD RoomPresence"
   project_name: "SmartHomeDesign.RoomPresence"
   project_version: "1.3.3"
-  factory_reset_disabled: "true"
-  uart_target_output_disabled: "true"
-  uart_presence_output_disabled: "true"
-
+  
   room: "default_room" # replace this with your room name
-  # temperature_offset: "-11.5"
-  # humidity_offset: "0"
-  # illuminance_offset: "0"
+
+  factory_reset_disabled: "true"
+  uart_target_output_disabled: "false"
+  uart_presence_output_disabled: "false"
+
   temperature_update_interval: "20s"
   illuminance_update_interval: "20s"
   pir_delay_off: "30s"
@@ -23,7 +22,8 @@ esphome:
   project:
     name: "${project_name}"
     version: "${project_version}"
-
+  includes:
+    - SEN0395_distance.h
 esp32:
   board: esp32dev
   framework:
@@ -50,9 +50,6 @@ esp32_improv:
 dashboard_import:
   package_import_url: github://smarthomedesign/room_presence/room_presence.yaml@dev
   import_full_config: false
-
-# preferences:
-#   flash_write_interval: 0s
 
 light:
   - platform: status_led
@@ -114,6 +111,10 @@ sensor:
     update_interval: ${illuminance_update_interval}
     i2c_id: bus_a
     address: 0x23
+  - platform: template
+    name: Target Distance m
+    id: target_distance_m # do not change
+    accuracy_decimals: 5
 
 # Reports the WiFi signal strength/RSSI in dB
   - platform: wifi_signal 
@@ -130,7 +131,8 @@ sensor:
       - lambda: return min(max(2 * (x + 100.0), 0.0), 100.0);
     unit_of_measurement: "Signal %"
     entity_category: "diagnostic"
-    
+  # Example configuration entry
+
 binary_sensor:
   # MMWave Sensor
   - platform: gpio
@@ -170,6 +172,12 @@ binary_sensor:
         return id(occupancy).state;
       }
 
+  # status sensor
+  - platform: status
+    id: device_status
+    name: "${room} Status"
+    entity_category: "diagnostic"
+    
 switch:
   - platform: template
     name: "mmWave Sensor"
@@ -303,7 +311,7 @@ number:
     id: mmwave_distance
     entity_category: config
     min_value: 0
-    max_value: 915
+    max_value: 900
     initial_value: 300
     optimistic: true
     step: 15
@@ -427,3 +435,7 @@ button:
       - delay: 3s
       - switch.turn_on: mmwave_sensor
 
+custom_component:
+- lambda: |-
+    auto my_custom = new Sen0395Distance(id(uart_bus));
+    return {my_custom};
