--- a/room_presence.yaml
+++ b/room_presence.yaml
@@ -108,6 +108,11 @@ sensor:
     update_interval: ${illuminance_update_interval}
     i2c_id: bus_a
     address: 0x23
+  - platform: template
+    name: Target Distance m
+    id: target_distance_m # do not change
+    accuracy_decimals: 5
+
 
 # Reports the WiFi signal strength/RSSI in dB
   - platform: wifi_signal 
@@ -427,3 +432,7 @@ button:
       - uart.write: "resetCfg"
       - delay: 3s
       - switch.turn_on: mmwave_sensor
+custom_component:
+- lambda: |-
+    auto my_custom = new Sen0395Distance(id(uart_bus));
+    return {my_custom};
