--- a/room_presence.yaml
+++ b/room_presence.yaml
@@ -3,15 +3,16 @@ substitutions:
   name: "shd-room-presence"
   friendly_name: "SHD RoomPresence"
   project_name: "SmartHomeDesign.RoomPresence"
-  project_version: "1.3.4"
+  project_version: "1.3.5"
   
-  room: "default_room" # replace this with your room name
+  room: "Room" # replace this with your room name
+
   factory_reset_disabled: "true"
   uart_target_output_disabled: "false"
   uart_presence_output_disabled: "false"
 
-  temperature_update_interval: "20s"
-  illuminance_update_interval: "20s"
+  temperature_update_interval: "30s"
+  illuminance_update_interval: "30s"
   pir_delay_off: "30s"
   occupancy_delay_off: "60s"
 
@@ -21,6 +22,7 @@ esphome:
   project:
     name: "${project_name}"
     version: "${project_version}"
+
 esp32:
   board: esp32dev
   framework:
@@ -88,11 +90,13 @@ sensor:
   - platform: sht4x
     temperature:
       name: "${room} Temperature"
+      id: "${room}_temperature"
       filters:
         # offset: ${temperature_offset}
         - lambda: return x + id(temperature_offset).state;
     humidity:
       name: "${room} Humidity"
+      id: "${room}_humidity"
       filters:
         # offset: ${humidity_offset}
         - lambda: return x + id(humidity_offset).state;
@@ -102,6 +106,7 @@ sensor:
   # Illuminace sensor
   - platform: bh1750
     name: "${room} Illuminance"
+    id: "${room}_illuminance"
     filters:
       # offset: ${illuminance_offset}
       - lambda: return x + id(illuminance_offset).state;
@@ -109,7 +114,8 @@ sensor:
     i2c_id: bus_a
     address: 0x23
 
-# Reports the WiFi signal strength/RSSI in dB
+
+  # Reports the WiFi signal strength/RSSI in dB
   - platform: wifi_signal 
     # name: "WiFi Signal dB"
     id: wifi_signal_db
@@ -120,11 +126,12 @@ sensor:
   - platform: copy 
     source_id: wifi_signal_db
     name: "${room} WiFi"
+    id: "${room}_WiFi"
     filters:
       - lambda: return min(max(2 * (x + 100.0), 0.0), 100.0);
     unit_of_measurement: "Signal %"
     entity_category: "diagnostic"
-  # Example configuration entry
+
 
 binary_sensor:
   # MMWave Sensor
@@ -177,7 +184,7 @@ switch:
     id: "mmwave_sensor"
     entity_category: config
     optimistic: true
-    restore_state: true
+    restore_mode: RESTORE_DEFAULT_ON
     turn_on_action:
       - uart.write: "sensorStart"
       - delay: 1s
@@ -190,7 +197,6 @@ switch:
     id: "mmwave_led"
     entity_category: config
     optimistic: true
-    restore_state: true
     restore_mode: RESTORE_DEFAULT_OFF
     turn_on_action:
       - switch.turn_off: mmwave_sensor
@@ -210,12 +216,12 @@ switch:
       - switch.turn_on: mmwave_sensor
 
   - platform: template
-    name: "uart_presence_output"
+    name: "${room} uart_presence_output"
     id: "uart_presence_output"
     entity_category: config
     internal: ${uart_presence_output_disabled}
     optimistic: true
-    restore_state: true
+    restore_mode: RESTORE_DEFAULT_OFF
     turn_on_action:
       - switch.turn_off: mmwave_sensor
       - delay: 1s
@@ -234,12 +240,12 @@ switch:
       - switch.turn_on: mmwave_sensor
 
   - platform: template
-    name: "uart_target_output"
+    name: "${room} uart_target_output"
     id: "uart_target_output"
     entity_category: config
     internal: ${uart_target_output_disabled}
     optimistic: true
-    restore_state: true
+    restore_mode: RESTORE_DEFAULT_OFF
     assumed_state: false
     turn_on_action:
       - switch.turn_off: mmwave_sensor
