--- a/room_presence.yaml
+++ b/room_presence.yaml
@@ -47,7 +47,7 @@ esp32_improv:
   authorizer: none
 
 dashboard_import:
-  package_import_url: github://smarthomedesign/room_presence/room_presence.yaml@dev
+  package_import_url: github://smarthomedesign/room_presence/room_presence.yaml@release_1.3.5
   import_full_config: false
 
 light:
@@ -131,6 +131,12 @@ sensor:
       - lambda: return min(max(2 * (x + 100.0), 0.0), 100.0);
     unit_of_measurement: "Signal %"
     entity_category: "diagnostic"
+
+text_sensor:
+  # Device IP
+  - platform: wifi_info
+    ip_address:
+      name: ${room} IP
 
 
 binary_sensor:
