--- a/room_presence.yaml
+++ b/room_presence.yaml
@@ -3,17 +3,16 @@ substitutions:
   name: "shd-room-presence"
   friendly_name: "SHD RoomPresence"
   project_name: "SmartHomeDesign.RoomPresence"
-  project_version: "1.3.1"
+  project_version: "1.3.6"
+  
+  room: "Room" # replace this with your room name
+
   factory_reset_disabled: "true"
   uart_target_output_disabled: "true"
   uart_presence_output_disabled: "true"
 
-  room: "default_room" # replace this with your room name
-  temperature_offset: "-11.5"
-  humidity_offset: "0"
-  illuminance_offset: "0"
-  temperature_update_interval: "20s"
-  illuminance_update_interval: "20s"
+  temperature_update_interval: "30s"
+  illuminance_update_interval: "30s"
   pir_delay_off: "30s"
   occupancy_delay_off: "60s"
 
@@ -48,7 +47,7 @@ esp32_improv:
   authorizer: none
 
 dashboard_import:
-  package_import_url: github://smarthomedesign/room_presence/room_presence.yaml@main
+  package_import_url: github://smarthomedesign/room_presence/room_presence.yaml@release_1.3.6
   import_full_config: false
 
 light:
@@ -61,6 +60,7 @@ light:
         output: true
         pullup: false
     entity_category: config
+    restore_mode: RESTORE_DEFAULT_OFF
 
 i2c:
   - id: bus_a   # Illuminance 
@@ -68,8 +68,8 @@ i2c:
     sda: 26
     scan: true
   - id: bus_b   # Temperature and Humidity
-    scl: 18
-    sda: 19
+    scl: 16
+    sda: 17
     scan: true
 
 uart:
@@ -90,24 +90,57 @@ sensor:
   - platform: sht4x
     temperature:
       name: "${room} Temperature"
+      id: "${room}_temperature"
       filters:
-        offset: ${temperature_offset}
+        # offset: ${temperature_offset}
+        - lambda: return x + id(temperature_offset).state;
     humidity:
       name: "${room} Humidity"
+      id: "${room}_humidity"
       filters:
-        offset: ${humidity_offset}
+        # offset: ${humidity_offset}
+        - lambda: return x + id(humidity_offset).state;
     update_interval: ${temperature_update_interval}
     i2c_id: bus_b
     address: 0x44
+ 
   # Illuminace sensor
   - platform: bh1750
     name: "${room} Illuminance"
+    id: "${room}_illuminance"
     filters:
-      offset: ${illuminance_offset}
+      # offset: ${illuminance_offset}
+      - lambda: return x + id(illuminance_offset).state;
     update_interval: ${illuminance_update_interval}
     i2c_id: bus_a
     address: 0x23
-    
+
+
+  # Reports the WiFi signal strength/RSSI in dB
+  - platform: wifi_signal 
+    # name: "WiFi Signal dB"
+    id: wifi_signal_db
+    update_interval: 60s
+    entity_category: "diagnostic"
+    internal: true
+  # Reports the WiFi signal strength in %
+  - platform: copy 
+    source_id: wifi_signal_db
+    name: "${room} WiFi"
+    id: "${room}_WiFi"
+    filters:
+      - lambda: return min(max(2 * (x + 100.0), 0.0), 100.0);
+    unit_of_measurement: "Signal %"
+    entity_category: "diagnostic"
+  - platform: uptime
+    name: ${room} Uptime
+text_sensor:
+  # Device IP
+  - platform: wifi_info
+    ip_address:
+      name: ${room} IP
+
+
 binary_sensor:
   # MMWave Sensor
   - platform: gpio
@@ -147,13 +180,19 @@ binary_sensor:
         return id(occupancy).state;
       }
 
+  # status sensor
+  - platform: status
+    id: device_status
+    name: "${room} Status"
+    entity_category: "diagnostic"
+    
 switch:
   - platform: template
     name: "mmWave Sensor"
     id: "mmwave_sensor"
     entity_category: config
     optimistic: true
-    restore_state: true
+    restore_mode: RESTORE_DEFAULT_ON
     turn_on_action:
       - uart.write: "sensorStart"
       - delay: 1s
@@ -166,7 +205,7 @@ switch:
     id: "mmwave_led"
     entity_category: config
     optimistic: true
-    restore_state: true
+    restore_mode: RESTORE_DEFAULT_OFF
     turn_on_action:
       - switch.turn_off: mmwave_sensor
       - delay: 1s
@@ -185,12 +224,12 @@ switch:
       - switch.turn_on: mmwave_sensor
 
   - platform: template
-    name: "uart_presence_output"
+    name: "${room} uart_presence_output"
     id: "uart_presence_output"
     entity_category: config
     internal: ${uart_presence_output_disabled}
     optimistic: true
-    restore_state: true
+    restore_mode: RESTORE_DEFAULT_OFF
     turn_on_action:
       - switch.turn_off: mmwave_sensor
       - delay: 1s
@@ -209,12 +248,12 @@ switch:
       - switch.turn_on: mmwave_sensor
 
   - platform: template
-    name: "uart_target_output"
+    name: "${room} uart_target_output"
     id: "uart_target_output"
     entity_category: config
     internal: ${uart_target_output_disabled}
     optimistic: true
-    restore_state: true
+    restore_mode: RESTORE_DEFAULT_OFF
     assumed_state: false
     turn_on_action:
       - switch.turn_off: mmwave_sensor
@@ -234,13 +273,52 @@ switch:
       - switch.turn_on: mmwave_sensor
 
 number:
+  # temperature_offset
+  - platform: template
+    name: ${room} Temperature offset
+    id: temperature_offset
+    entity_category: config
+    min_value: -50.0
+    max_value: 50.0
+    initial_value: -11.5
+    optimistic: true
+    step: 0.1
+    restore_value: true
+    unit_of_measurement: "°C"
+
+  # humidity_offset
+  - platform: template
+    name: ${room} Humidity offset
+    id: humidity_offset
+    entity_category: config
+    min_value: -50.0
+    max_value: 50.0
+    initial_value: 0
+    optimistic: true
+    step: 0.1
+    restore_value: true
+    unit_of_measurement: "%"
+
+  # illuminance_offset
+  - platform: template
+    name: ${room} Illuminance offset
+    id: illuminance_offset
+    entity_category: config
+    min_value: -50.0
+    max_value: 50.0
+    initial_value: 0
+    optimistic: true
+    step: 0.1
+    restore_value: true
+    unit_of_measurement: "lx"
+
   - platform: template
     name: "${room} mmWave Distance"
     id: mmwave_distance
     entity_category: config
     min_value: 0
-    max_value: 800
-    initial_value: 315
+    max_value: 900
+    initial_value: 300
     optimistic: true
     step: 15
     restore_value: true
@@ -262,8 +340,8 @@ number:
     id: mmwave_off_latency
     entity_category: config
     min_value: 1
-    max_value: 60
-    initial_value: 15
+    max_value: 90
+    initial_value: 30
     optimistic: true
     step: 1
     restore_value: true
@@ -285,7 +363,7 @@ number:
     id: mmwave_on_latency
     entity_category: config
     min_value: 0
-    max_value: 60
+    max_value: 90
     initial_value: 0
     optimistic: true
     step: 0.5
@@ -309,7 +387,7 @@ number:
     entity_category: config
     min_value: 0
     max_value: 9
-    initial_value: 7
+    initial_value: 4
     optimistic: true
     step: 1
     restore_value: true
